Fix icons bug on mobile devices

--- a/src/styles/Homepage/_header.scss
+++ b/src/styles/Homepage/_header.scss
@@ -24,6 +24,26 @@
   }
 
   @media only screen and (max-width: 479px){
+   .header{
+      .icon_right{
+         display: flex;
+         float: right;
+        img.icon1{
+           margin-top: -40px;
+           margin-bottom: 10px;
+           margin-right: 30px;
+        }
+        img.icon2{
+         margin-top: -38px;
+         margin-bottom: 10px;
+         width: 28px;
+         height: 28px;
+         margin-right: 30px;
+         margin-left: -5px;
+
+        }
+      }
+   }
    .text_h4{
      display: flex;
      justify-content: center;
